<resources>
    <string name="app_name">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="add_task">Add Task</string>
    <string name="enter_the_deadline">Enter the Deadline</string>
    <string name="edit_task">Edit Task.</string>
    <string name="edit_the_title">Edit the title</string>
    <string name="edit_the_description">Edit the description</string>
    <string name="edit_deadline">Edit Deadline</string>
    <string name="editTsk">edittsk\n</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="enter_priority">Enter Priority</string>
    <string name="enter_priority_high_medium_low">Enter Priority (High , Medium, Low)</string>
    <string name="priority">Priority</string>
    <string name="listup_your_tasks_with_easy_me">Listup Your Tasks with Easy Me</string>
</resources>