<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editTaskHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/edit_task"
            android:textStyle="bold"
            android:textColor="@color/components_1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/edit_the_title"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/editTaskHeading"
            android:background="@drawable/blue_border"
            android:layout_marginTop="16dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editTaskDescription"
            android:layout_width="399dp"
            android:layout_height="235dp"
            android:layout_below="@id/editTaskTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/blue_border"
            android:gravity="top"
            android:hint="@string/edit_the_description"
            android:padding="12dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTaskDeadline"
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:layout_below="@id/editTaskTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="272dp"
            android:background="@drawable/blue_border"
            android:gravity="top"
            android:hint="@string/edit_deadline"
            android:padding="12dp"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/components_1"
            android:tintMode="@color/white"
            android:src="@drawable/baseline_done_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/editTsk" />

    </RelativeLayout>
</layout>