<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">


        <TextView
            android:id="@+id/addTaskHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="50dp"
            android:text="@string/add_task"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addTaskHeader"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="67dp"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addTaskDescription"
            android:layout_width="357dp"
            android:layout_height="251dp"
            android:layout_below="@id/addTaskTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/white"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addTaskHeader"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="390dp"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/addTaskPriority"
            style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
            android:layout_width="310dp"
            android:layout_height="63dp"
            android:layout_below="@id/priorityLabel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/white"
            android:entries="@array/priority_levels"
            android:padding="12dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/addTaskDeadline"
            android:layout_width="337dp"
            android:layout_height="61dp"
            android:layout_below="@id/addTaskPriority"
            android:layout_alignParentStart="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="37dp"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/white"
            android:gravity="top"
            android:hint="@string/enter_the_deadline"
            android:padding="12dp"
            android:textSize="18sp" />

    </RelativeLayout>
</layout>